--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -1,7 +1,21 @@
+html, body {
+  height: 100%;
+}
+
 .footer-container {
+    display: flex;
+    flex-direction: column;
+    overflow: auto; /* 스크롤이 생기면 내용을 스크롤하여 보여줌 */
     background-color: #f5f5f5;
     padding: 20px;
     text-align: center;
+  }
+
+  .footer {
+    position: sticky;
+    bottom: 0;
+    background-color: #f5f5f5;
+    padding: 20px;
   }
 
   .footer-content {
