--- a/frontend/src/assets/css/Login.scss
+++ b/frontend/src/assets/css/Login.scss
@@ -1,18 +1,21 @@
 .login-title {
     text-align: center;
     margin-bottom: 50px;
+    margin-top: 30px;
+    font-size: xx-large;
+    font-weight: 600;
 }
 
 .login-form {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; 
 }
 
 .login-input {
     margin-bottom: 10px;
     font-size: 1em;
-    width: 350px;
+    width: 380px;
     padding: 15px;
     border: 1px solid lightgray;
     border-radius: 5px;
@@ -25,7 +28,7 @@
     font-size: large;
     margin-top: 30px;
     margin-bottom: 30px;
-    width: 383px;
+    width: 380px;
     padding: 17px 0px;
     border: 1px solid green;
     border-radius: 5px;
@@ -51,7 +54,7 @@
     overflow: hidden;
     position: relative;
     text-align: center;
-    height: 100px;
+    padding: 15px;
     width: 380px;
     line-height: 16px;
     border-radius: 5px;
