--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -1,21 +1,11 @@
-html, body {
-  height: 100%;
-}
 
 .footer-container {
-    display: flex;
-    flex-direction: column;
-    overflow: auto; /* 스크롤이 생기면 내용을 스크롤하여 보여줌 */
+    width: 100%;
+    bottom: 0;
+    overflow: auto;
     background-color: #f5f5f5;
     padding: 20px;
     text-align: center;
-  }
-
-  .footer {
-    position: sticky;
-    bottom: 0;
-    background-color: #f5f5f5;
-    padding: 20px;
   }
 
   .footer-content {
@@ -24,7 +14,7 @@ html, body {
     align-items: center;
     flex-wrap: wrap;
   }
-  
+
   .footer-content p {
     margin: 0;
     font-size: 14px;
