--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -1,22 +1,19 @@
-html, body {
-  height: 100%;
-}
-
 .footer-container {
-    display: flex;
-    flex-direction: column;
     overflow: auto; /* 스크롤이 생기면 내용을 스크롤하여 보여줌 */
     background-color: #f5f5f5;
     padding: 20px;
+    width:100%;
+    margin: 0;
     text-align: center;
   }
 
-  .footer {
+  /* .footer {
     position: sticky;
+    width: 100%;
     bottom: 0;
     background-color: #f5f5f5;
     padding: 20px;
-  }
+  } */
 
   .footer-content {
     display: flex;
