--- a/frontend/src/assets/css/Login.scss
+++ b/frontend/src/assets/css/Login.scss
@@ -72,3 +72,17 @@
     margin-bottom: 300px;
     cursor: pointer;
 }
+
+.login-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100px;
+  }
+
+
+  .login-logo {
+    margin-top: 30rem;
+    margin-bottom: 0;
+    width: 300px;
+  }
