--- a/frontend/src/assets/css/Login.scss
+++ b/frontend/src/assets/css/Login.scss
@@ -1,74 +1,78 @@
 .login-title {
-    text-align: center;
-    margin-bottom: 50px;
-    margin-top: 50px;
-    font-size: xx-large;
-    font-weight: 600;
+  text-align: center;
+  margin-bottom: 50px;
+  margin-top: 50px;
+  font-size: xx-large;
+  font-weight: 600;
 }
 
 .login-form {
-    display: flex;
-    justify-content: center;
-    align-items: center; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.enroll-form{
-    display: flex;
-    justify-content: center;
-    align-items: center; 
-   
+.enroll-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .login-input {
-    margin-bottom: 10px;
-    font-size: 1em;
-    width: 380px;
-    padding: 15px;
-    border: 1px solid lightgray;
-    border-radius: 5px;
+  margin-bottom: 10px;
+  font-size: 1em;
+  width: 380px;
+  padding: 15px;
+  border: 1px solid lightgray;
+  border-radius: 5px;
 }
-.overlap-button{
-    background: linear-gradient(to right, #8bc34a, #4caf50);
+.overlap-button {
+  background: linear-gradient(to right, #8bc34a, #4caf50);
 }
 .login-btn {
-    background: linear-gradient(to right, #8bc34a, #4caf50);
-    // background-color: green;
-    display: inline-block;
-    color: white;
-    font-weight: 700;
-    font-size: large;
-    margin-top: 5px;
-    margin-bottom: 15px;
-    width: 380px;
-    height: 50px;
-    padding: 13px 0px;
-    // border: 1px solid green;
-    border-radius: 5px;
-    cursor: pointer;
+  background: linear-gradient(to right, #8bc34a, #4caf50);
+  // background-color: green;
+  display: inline-block;
+  color: white;
+  font-weight: 700;
+  font-size: large;
+  margin-top: 5px;
+  margin-bottom: 15px;
+  width: 380px;
+  height: 50px;
+  padding: 13px 0px;
+  // border: 1px solid green;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 .login-link {
-    text-align: center;
-    margin-right: 10px;
-    margin-bottom: 30px;
+  text-align: center;
+  margin-right: 10px;
+  margin-bottom: 30px;
 }
 
 .login-link a {
-    text-decoration: none;
-    color: #333;
+  text-decoration: none;
+  color: #333;
 }
 
 .login-link a:hover {
-    color: green;
+  color: green;
 }
 
 .login-kakao {
-    display: block;
-    overflow: hidden;
-    position: relative;
-    text-align: center;
-    padding: 15px;
-    border-radius: 5px;
-    margin-bottom: 300px;
-    cursor: pointer;
+  display: block;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  padding: 15px;
+  border-radius: 5px;
+  margin-bottom: 300px;
+  cursor: pointer;
+}
+
+.disabled {
+  pointer-events: none;
+  cursor: default;
 }
